# market-strategy-testing-bot

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_COMPLETE.md  API_INTEGRATION.md  API_KEYS.md  ARCHITECTURE.md  AUTO_UPDATE_IMPLEMENTATION.md  COMPLETE_BOT_CONTROL_SUMMARY.md  CONTRIBUTING.md  CORE_MODULES_README.md  DASHBOARD_CRITICAL_FIXES.md  DASHBOARD_DESIGN.md  DASHBOARD_OVERHAUL_SUMMARY.md  DASHBOARD_PR19_SUMMARY.md  DASHBOARD_STARTUP.md  DASHBOARD_SUMMARY.md  DEPLOYMENT.md  Dockerfile  EMERGENCY_RECOVERY.md  FAQ.md  FEATURE_AUDIT_REPORT.md  FEATURE_AUDIT_USAGE.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  FREE_APIS_README.md  FREE_API_IMPLEMENTATION.md  FREE_DATA_INTEGRATION_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_DATA_INFRASTRUCTURE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIX_SUMMARY.md  LICENSE  MERGE_CONFLICT_RESOLUTION.md  MERGE_RESOLUTION.md  (+108 more)
analysis/: __init__.py  diagnostics.py  suggestions.py  trade_context.py
api/: __init__.py  server.py
apis/: README.md  __init__.py  binance_client.py  coingecko_client.py  data_aggregator.py  polymarket_subgraph.py  price_aggregator.py
clients/: __init__.py  base_client.py  coingecko_client.py  mock_crypto_client.py  mock_market_client.py  polymarket_client.py
config/: __init__.py  config_loader.py  encryption.key
dashboard/: DATA_CONTRACTS.md  README.md  app.py  websocket_server.py
data/: settings.db
data_sources/: README.md  __init__.py  binance_client.py  coingecko_client.py  polymarket_subgraph.py  price_aggregator.py
database/: __init__.py  competition_models.py  models.py  settings_models.py  trades_store.py
docs/: DUPLICATE_RESOLUTION.md  MICRO_OPTIMIZATION_OPPORTUNITIES.md  MOBILE_SETUP.md  REMOTE_ACCESS_GUIDE.md  (+20 more)
(+265 files in other folders)
